# daw

./: .gitignore  Cargo.toml  Makefile
crates/app/: Cargo.toml
crates/app/src/: app_menus.rs  beats.rs  config.rs  keybindings.rs  main.rs  theme.rs
crates/app/src/ui/: cursor.rs  header.rs  mod.rs  playhead.rs  ruler.rs  sidebar.rs  track.rs  track_labels.rs
crates/app/src/ui/primitives/: button.rs  input.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: clip_ops.rs  lib.rs  session.rs  time.rs
crates/decode/: Cargo.toml
crates/decode/src/: lib.rs
crates/egui/: Cargo.toml
crates/egui/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/examples/: sample.rs  sine.rs
crates/engine/src/: lib.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs  load.rs  save.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/tauri/: package.json
crates/tauri/src/: app.html
crates/tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs  poll.rs  state.rs
crates/tauri/src/lib/components/: Header.svelte
crates/tauri/src/lib/stores/: dialog-paths.svelte.ts  session.svelte.ts  (+1 more)
crates/tauri/src/routes/: +layout.svelte  +page.svelte
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
docs/: audio-architecture.md  audio-recording.md  frontend_mvp_tauri_svelte.md  project.md  sample-refs.md  session-engine.md
projects/: beat.dawproj  beat_1.dawproj  bossa_maybe.dawproj  cow.dawproj  poop.dawproj  present_tense.dawproj  test.dawproj
samples/: credits.txt
