[package]
name = "daw_core"
version.workspace = true
edition.workspace = true

[dependencies]
daw_decode = { path = "../decode" }
daw_engine = { path = "../engine" }
daw_project = { path = "../project" }
daw_render = { path = "../render" }
daw_transport = { path = "../transport" }
anyhow = "1.0"
basedrop = "0.1"
