[package]
name = "daw_egui"
version.workspace = true
edition.workspace = true

[dependencies]
daw_core = { path = "../core" }
daw_decode = { path = "../decode" }
daw_engine = { path = "../engine" }
daw_project = { path = "../project" }
daw_transport = { path = "../transport" }
eframe = "0.31"
rfd = "0.15"
rmp-serde = "1.3"
