[package]
name = "daw_project"
version.workspace = true
edition.workspace = true

[dependencies]
daw_transport = { path = "../transport" }
daw_decode = { path = "../decode" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.14"
